[package]
name = "zbus_module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
libc = "0.2.*"
env_logger = "0.10.*"
hostname = "0.3.*"
log = "0.4.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version="1.0.*", default-features = true }
zenoh = "0.10.0-rc"
